--- a/app/src/main/assets/mathscribe/mathematics_power_series.html
+++ b/app/src/main/assets/mathscribe/mathematics_power_series.html
@@ -3,43 +3,42 @@
 
 <head>
 	<meta charset="utf-8">
-	
+
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=UnifrakturMaguntia">
 	<link rel="stylesheet" href="../mathscribe/jqmath-0.4.3.css">
-	
+
 	<script src="../mathscribe/jquery-1.4.3.min.js"></script>
 	<script src="../mathscribe/jqmath-etc-0.4.3.min.js" charset="utf-8"></script>
-	<!-- <script>M.MathPlayer = false; M.trustHtml = true;</script> -->
-
-<!--
-To use jqMath in an html file, use a text editor to copy the above lines to the beginning of
-your file, remove any corresponding old tags, and save the file in UTF-8 format.
-
-If you aren't writing in English, change "en" above to the correct language code, especially if
-your language allows a comma as a decimal mark (instead of a period).
-
-If you don't use Fraktur characters, you can remove the link on line 7, as this may speed up
-download times slightly.
-
-You may need to change each "../mathscribe" path above, depending on the directory structure
-that you choose.
-
-You can use a different version of jquery (1.0+) if you prefer.  We've just provided this one
-for your convenience.
-
-If you need to use the \html macro, then uncomment the M.MathPlayer and M.trustHtml line above.
-But if you are going to parse untrusted user input using jqMath, even in a blog comment, you
-must ensure that M.trustHtml is set back to false first.
-
-The files jscurry-0.4.0.js, jscurry-0.4.0.min.js, and jqmath-0.4.3.js are provided just for your
-information.  They are all included, and compressed, in jqmath-etc-0.4.3.min.js.
--->
-
-	<title>in progress</title>
+	<title>Power series</title>
 </head>
 <body>
+<center><h3>$●$ Power series</h3></center>
+<table border="1" style="border:1px solid Navy;" bgcolor="PowderBlue">
+	<tr><td>Binomial series$^a$</td>
+		<td>$\(1+x\)^n=1+nx+{n(n-1)}/{2!}x^2+{n(n-1)(n-2)}/{3!}x^3+...$</td></tr>
+	<tr><td>Binomial coefficient$^b$</td>
+		<td>$^n C_r≡(\table n; r)≡{n!}/{r!(n-r)!}$</td></tr>
+	<tr><td>Binomial theorem</td>
+		<td>$(a+b)^n = ∑↙{k=0}↖n (\table n; k)a^{n-k}b^{k}$</td></tr>
+	<tr><td>Taylor series (about a)$^c$</td>
+		<td>$f(a+x)=f(a)+xf^{(1)}(a)+{x^2}/{2!}f^{(2)}(a)+...
+			+{x^{n-1}}/{(n-1)!}f^{(n-1)}(a)+...$</td></tr>
+	<tr><td>Taylor series (3-D)</td>
+		<td>$f(\bo a+\bo x)=f(\bo a)+(\bo x⋅\bo ∇)f|_{\bo a}+{(\bo x⋅\bo ∇)^2}/{2!}f|_{\bo a}+
+			{(\bo x⋅\bo ∇)^3}/{3!}f|_{\bo a}+...$</td></tr>
+	<tr><td>Maclaurin series</td>
+		<td>$f(x)=f(0)+xf^{(1)}(0)+{x^2}/{2!}f^{(2)}(0)+...+{x^{n-1}}/{(n-1)!}f^{(n-1)}(0)+...$</td>
+	</tr>
+</table>
+<p>$^a$ If $n$ is a positive integer the series terminates and is valid for all $x$. Otherwise the
+	(infinite)series is convergent for $|x|<1$.</p>
+<p>$^b$ The coefficient of $x^r$ in the binomial series.</p>
+<p>$^c$ $xf^{(n)}(a)$ is $x$ times the $n$th derivative of the function $f(x)$ with respect to $x$
+	evaluated at $a$, taken as well behaved around $a$. $(\bo x⋅\bo ∇)^n f|_{\bo a}$ is its
+	extension to three
+	dimensions.</p>
 
-<p>in progress</p>
+<p>Well done! You have mastered "Power series"!</p>
 
 </body>
 </html>
